--- a/index.html
+++ b/index.html
@@ -5,6 +5,185 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <nav class="menu">
+        <ul class="header_links-list">
+          <li class="header_links-list-item item_no-bullit">
+            <a class="link_active" href="#0">Главная</a>
+          </li>
+          <li>
+            <a class="underline" href="#lots">Посмотреть лоты</a>
+          </li>
+          <li>
+            <a class="underline" href="#about">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="header_logo">
+        <img
+          class="header__logo-image"
+          src="./images/logo-black.svg"
+          alt="Логотип Оно тебе надо"
+        />
+      </a>
+      <address class="address header_address">
+        <a class="underline" href="tel:+99995555555">+9 999 555 5555</a><br />
+        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
+        наб. Принсенграхт 263-265, <br />
+        Амстердам
+      </address>
+    </header>
+    <main>
+      <section class="cover background_settings">
+        <div class="overlay"></div>
+        <h1 class="cover_title">
+          <span class="aligned-text aligned-text_left letter-spacing-extended">О<span class="letter-spacing-additional">но </span></span>
+          <span class="aligned-text aligned-text_center letter-spacing-extended">те<span class="letter-spacing-additional">бе</span></span>
+          <span class="aligned-text aligned-text_right letter-spacing-additional">н<span class="letter-spacing-extended">ад</span><span class="no-letter-spacing">о</span></span>
+        </h1>
+        <div class="cover_description">
+          <p class="cover_description-text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="bet_button" type="button">Сделать ставку</button>
+        </div>
+      </section>
+      <section class="lots" id="lots">
+        <h2 class="lots_heading">Лоты</h2>
+        <ul class="card-list">
+          <li class="card-list-item card_type_film background_settings">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card_content">
+                <p class="card_title">
+                  Фильм режиссёра, который бросил киношколу
+                </p>
+                <p class="card_text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="card-list-item card_type_book background_settings">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card_content">
+                <p class="card_title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </p>
+                <p class="card_text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
+          </li>
+          <li class="card-list-item card_type_picture background_settings">
+            <div class="overlay"></div>
+            <a class="card-link" href="#0">
+              <article class="card_content">
+                <p class="card_title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </p>
+                <p class="card_text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
+          </li>
+        </ul>
+        <a class="lots_look-more-link underline" href="#0">Посмотреть больше</a>
+      </section>
+      <section class="about" id="about">
+        <div class="about_logo">
+          <img 
+            src="./images/logo-white.svg" 
+            alt="Логотип Оно тебе надо" />
+        </div>
+        <h3 class="about_title">Об аукционе</h3>
+        <div class="about_text">
+          <p>
+            Здесь вы не встретите очередное пафосное собрание невероятно
+            дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
+            один аукцион. Потому что кому нужен дневник девочки-подростка или
+            картина, которую может нарисовать даже ребёнок? Кому нужны все эти
+            странные вещи, созданные любителями?
+          </p>
+          <p>
+            Слишком сложные или, наоборот, слишком простые. Опережающие своё
+            время. В пух и прах растерзанные критиками. Непринятые и непонятые.
+            Когда-то они казались просто неудачными. Но, несмотря на критику,
+            кажущуюся простоту или сложность, сейчас без этих лотов невозможно
+            представить современную культуру. Когда в эти вещи не верил никто,
+            продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          </p>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">
+      <address class="address footer_address">
+        <a class="underline" href="tel:+99995555555">+9 999 555 5555</a><br />
+        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a
+        ><br />
+        наб. Принсенграхт 263-265, <br />
+        Амстердам
+      </address>
+      <nav>
+        <ul class="footer_menu-list">
+          <li class="footer_links-list-item">
+            <a class="link_active" href="#0">Главная</a>
+          </li>
+          <li>
+            <a class="underline" href="#lots">Посмотреть лоты</a>
+          </li>
+          <li>
+            <a class="underline" href="#about">Об аукционе</a>
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer_social-list">
+        <li>
+          <a href="#0">
+            <img
+              class="footer_social-icon"
+              src="./images/yt.svg"
+              alt="Иконка Ютуб"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#0">
+            <img
+              class="footer_social-icon"
+              src="./images/vk.svg"
+              alt="Иконка ВК"
+            />
+          </a>
+        </li>
+        <li>
+          <a href="#0">
+            <img
+              class="footer_social-icon"
+              src="./images/pinterest.svg"
+              alt="Иконка Пинтерест"
+            />
+          </a>
+        </li>
+      </ul>
+    </footer>
+  </body>
 </html>
