Исправлены ошибки и выполнены рекомендации

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <header class="header">
       <nav class="menu">
         <ul class="header_links-list">
-          <li class="header_links-list-item item_no-bullit">
-            <a class="link_active" href="#0">Главная</a>
+          <li class="header_links-list-item item_no-bullit link_active">
+            <a class="menu_link" href="#0">Главная</a>
           </li>
-          <li>
-            <a class="underline" href="#lots">Посмотреть лоты</a>
+          <li class="header_links-list-item">
+            <a class="menu_link" href="#lots">Посмотреть лоты</a>
           </li>
-          <li>
-            <a class="underline" href="#about">Об аукционе</a>
+          <li class="header_links-list-item">
+            <a class="menu_link" href="#about">Об аукционе</a>
           </li>
         </ul>
       </nav>
@@ -33,9 +33,8 @@
       </a>
       <address class="address header_address">
         <a class="underline" href="tel:+99995555555">+9 999 555 5555</a><br />
-        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
-        наб. Принсенграхт 263-265, <br />
-        Амстердам
+        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
     </header>
     <main>
@@ -60,9 +59,9 @@
             <div class="overlay"></div>
             <a class="card-link" href="#0">
               <article class="card_content">
-                <p class="card_title">
+                <h3 class="card_title">
                   Фильм режиссёра, который бросил киношколу
-                </p>
+                </h3>
                 <p class="card_text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
@@ -75,9 +74,9 @@
             <div class="overlay"></div>
             <a class="card-link" href="#0">
               <article class="card_content">
-                <p class="card_title">
+                <h3 class="card_title">
                   Книга, где описан один скучный день из жизни рекламного агента
-                </p>
+                </h3>
                 <p class="card_text">
                   Объёмом почти в тысячу страниц. Иногда без знаков препинания и
                   с переходами на древнеанглийский. В ней одновременно
@@ -93,9 +92,9 @@
             <div class="overlay"></div>
             <a class="card-link" href="#0">
               <article class="card_content">
-                <p class="card_title">
+                <h3 class="card_title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
-                </p>
+                </h3>
                 <p class="card_text">
                   Ну действительно, там линия, тут кружочек, а здесь и вовсе
                   что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -114,7 +113,7 @@
             src="./images/logo-white.svg" 
             alt="Логотип Оно тебе надо" />
         </div>
-        <h3 class="about_title">Об аукционе</h3>
+        <h2 class="about_title">Об аукционе</h2>
         <div class="about_text">
           <p>
             Здесь вы не встретите очередное пафосное собрание невероятно
@@ -137,21 +136,19 @@
     <footer class="footer">
       <address class="address footer_address">
         <a class="underline" href="tel:+99995555555">+9 999 555 5555</a><br />
-        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a
-        ><br />
-        наб. Принсенграхт 263-265, <br />
-        Амстердам
+        <a class="underline" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <p>наб. Принсенграхт 263-265, Амстердам</p>
       </address>
       <nav>
         <ul class="footer_menu-list">
+          <li class="footer_links-list-item link_active">
+            <a class="menu_link" href="#0">Главная</a>
+          </li>
           <li class="footer_links-list-item">
-            <a class="link_active" href="#0">Главная</a>
+            <a class="menu_link" href="#lots">Посмотреть лоты</a>
           </li>
-          <li>
-            <a class="underline" href="#lots">Посмотреть лоты</a>
-          </li>
-          <li>
-            <a class="underline" href="#about">Об аукционе</a>
+          <li class="footer_links-list-item">
+            <a class="menu_link" href="#about">Об аукционе</a>
           </li>
         </ul>
       </nav>
